# alphacsc

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELEASE.md  codecov.yml  install_multicsc.sh  learn_ica_multi.py  main_multicsc.py  multivariate_csc.py  plot_1D_vs_multi.py  plot_kmeans_init.py  plot_kmeans_init_and_final.py  plot_scaling_channels.py  plot_simulate_csc.py  plot_spectrogram.py  plot_whitening.py  pyproject.toml  pytest.ini  requirements.txt  run_1D_vs_multi.py  run_compare_methods.py  run_compare_methods_plot.py  run_lambda_max_init.py  run_scaling_channels.py  sample_data_csc.py  setup.cfg  setup.py  simulate_compare_1D_vs_multi.py  somato_data_csc.py
.github/workflows/: deploy_ghpages.yml  lint.yml  unittests.yml  upload-to-pypi.yml
alphacsc/: .travis.yml  __init__.py  _d_solver.py  _encoder.py  _solver_d.py  _z_encoder.py  convolutional_dictionary_learning.py  encoder.py  init_dict.py  learn_d_torch.py  learn_d_z.py  learn_d_z_mcem.py  learn_d_z_multi.py  loss_and_gradient.py  motif.py  online_dictionary_learning.py  simulate.py  swm.py  update_d.py  update_d_multi.py  update_w.py  update_z.py  update_z_multi.py  utils.py  viz.py
alphacsc/cython/: __init__.py  compute_ztX.pyx  compute_ztx.pyx  compute_ztz.pyx  coordinate_descent.pyx  sparse_conv.pyx
alphacsc/cython_code/: __init__.py  compute_ztX.c  compute_ztz.c  compute_ztz.pyx  coordinate_descent.c  sparse_conv.c  sparse_conv.pyx
alphacsc/datasets/: camcan.py  hcp.py  mne_data.py  simulate.py  somato.py
alphacsc/kmc2/: custom_distances.py  kmc2.pyx  setup.py
alphacsc/other/: heide_csc.py  k_medoids.py  motif.py  swm.py
alphacsc/tests/: conftest.py  helper_functions.py  test_d_solver.py  test_encoder.py  test_init_d.py  test_learn_d_z.py  test_learn_d_z_multi.py  test_learn_d_z_weighted.py  test_loss_and_gradient.py  test_online_dictionary_learning.py  test_solver_d.py  test_update_d_multi.py  test_update_z_multi.py  test_utils.py  test_z_encoder.py
alphacsc/utils/: __init__.py  arma.py  checks.py  (+14 more)
benchmarks/: 1D_vs_multi_plot.py  1D_vs_multi_run.py  bench_methods_plot.py  bench_methods_proposed_run.py  bench_methods_run.py  compute_ztX.py  compute_ztx.py  compute_ztz.py  convolve_ztz.py  greedy_coordinate_descent.py  multivariate_convolve.py  multivariate_convolve_2.py  scaling_channels_run.py
doc/: .gitignore  Makefile  api.rst  conf.py  index.rst  models.rst  validate.py
examples/: README.txt  plot_lfp_data.py  plot_simulate.py  plot_simulate_alphacsc.py  plot_simulate_csc.py  plot_simulate_motif.py  plot_simulate_randomstate.py  plot_simulate_swm.py  plot_somato_mu_waves.py
examples_multicsc/: 1D_vs_multi_plot.py  1D_vs_multi_run.py  bench_methods_plot.py  bench_methods_run.py  compute_sample_data.py  compute_somato_data_mu.py  find_s1_dipole.py  plot_1D_vs_multi.py  plot_compare_methods.py  plot_fit_dipole.py  plot_fit_dipole_sample.py  plot_fit_dipole_somato.py  plot_kmeans_init.py  plot_kmeans_init_and_final.py  plot_motor_imagery.py  plot_sample_data.py  plot_sample_data_cardiac.py  plot_sample_data_eyeblink.py  plot_sample_data_two_conds.py  plot_scaling_channels.py  plot_simulate_csc.py  plot_somato_data_mu.py  plot_spectrogram.py  plot_whitening.py  run_1D_vs_multi.py  run_compare_methods.py  run_lambda_max_init.py  run_scaling_channels.py  scaling_channels_plot.py  scaling_channels_run.py  somato_data_csc.py  somato_data_csc_multi.py
exps/: .gitignore  sample_simulation.py
multicsc/: convolutional_dictionary_learning.py  init_dict.py  learn_d_z.py  learn_d_z_multi.py  loss_and_gradient.py  simulate.py  update_d.py  update_d_multi.py  update_w.py  update_z.py  update_z_multi.py
(+110 files in other folders)
