# pyproject.toml
[build-system]
requires = [
  "setuptools>=45",
  "wheel",
  "oldest-supported-numpy", # https://github.com/scipy/oldest-supported-numpy
  "Cython",
  "setuptools_scm>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "alphacsc/_version.py"

[tool.cibuildwheel]
build-verbosity = 1
test-requires = "pytest"
test-command = "pytest --pyargs alphacsc"

