# pyproject.toml
[build-system]
requires = [
  "setuptools>=45",
  "wheel",
  "oldest-supported-numpy", # https://github.com/scipy/oldest-supported-numpy
  "setuptools_scm>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "alphacsc/_version.py"
local_scheme = "no-local-version"
