[metadata]
description_file = README.rst


[options.extras_require]
test =
     pytest
     pytest-cov

doc =
    numpydoc
    sphinx_bootstrap_theme
    sphinx_gallery
    pactools
    nibabel

dev =
    flake8

dicodile =
    dicodile

[flake8]
exclude =
     .git,
    __pycache__,
    alphacsc/other,
    examples/
    benchmarks/

count = True

