[metadata]
name = alphacsc
version = attr: alphacsc._version.version
description = Convolutional dictionary learning for noisy signals.
maintainer = Thomas Moreau
author_email = thomas.moreau@inria.fr
license = BSD (3-clause)
url = https://github.com/alphacsc/alphacsc.git
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
platforms = any

[options]
zip_safe = True
include_package_data = True
install_requires =
    mne
    numba
    numpy
    scipy
    joblib
    matplotlib
    scikit-learn
packages = find:

[options.extras_require]
test =
     pytest
     pytest-cov

doc =
    pydata-sphinx-theme	 
    numpydoc
    sphinx_gallery
    sphinx
    pactools
    nibabel

dev =
    flake8

dicodile =
    dicodile >= 0.2.1

[flake8]
exclude =
    .git,
    __pycache__,
    alphacsc/other,
    examples/
    benchmarks/
count = True

[build_ext]
inplace = 1
